docs: cria o endpoint de atualizar usuario e o de deletar.
