# storage/api-docs/openapi.json
@@ -94,6 +94,63 @@
                         "description": "Usuário não encontrado"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Usuários"
+                ],
+                "summary": "Atualiza um usuário específico pelo ID",
+                "operationId": "updateUser",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/UserId"
+                    }
+                ],
+                "requestBody": {
+                    "required": false,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateUserRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Usuário atualizado com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Usuário não encontrado"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Usuários"
+                ],
+                "summary": "Deleta um usuário específico pelo ID",
+                "operationId": "deleteUser",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/UserId"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Usuário deletado com sucesso"
+                    },
+                    "400": {
+                        "description": "Falha ao deletar o usuário"
+                    }
+                }
             }
         }
     },
@@ -112,6 +169,35 @@
                     "email": {
                         "type": "string",
                         "example": "joao@email.com"
+                    },
+                    "password": {
+                        "type": "string",
+                        "example": "senha123"
+                    },
+                    "date_of_birth": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
+            "UpdateUserRequest": {
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "João Silva"
+                    },
+                    "email": {
+                        "type": "string",
+                        "example": "joao.silva@example.com"
+                    },
+                    "password": {
+                        "type": "string",
+                        "example": "novaSenha123"
+                    },
+                    "date_of_birth": {
+                        "type": "string",
+                        "format": "date-time"
                     }
                 },
                 "type": "object"
